# akin-hash

./: Cargo.toml  README.md  package.json  rust-toolchain.toml  turbo.json
.changeset/: boost-petrinaut-panda-specificity.md  bottom-panel-header-polish.md  calm-tables-follow.md  de-brand-ai-assistant-panel.md  fe-1121-uuid-token-dimension-type.md  fe-1153-type-policy-registry.md  fe-1181-use-scroll-lock.md  fe-769-string-token-dimension-type.md  fresh-optimizers-stream.md  fresh-optimizers-ui.md  grip-vertical-icon.md  h-6519-discrete-token-attribute-types.md  net-parameters-in-metrics.md  petrinaut-hir-compiler.md  petrinaut-settings-right-padding.md  shared-simulation-seed.md  token-codec-exports.md  token-frame-format-packed-structs.md  unify-panda-css-generation.md
.config/mise/: config.ci.toml  config.toml
.cursor/rules/: graph-queries.md
.github/actions/install-tools/: action.yml
.github/instructions/: code-review.instructions.md  rust-review.instructions.md  typescript-review.instructions.md
.github/workflows/: bench.yml  codspeed.yml  deploy.yml  housekeeping.yml  lint.yml  preflight.yml  test.yml
.yarn/patches/: http-proxy-middleware-npm-3.0.7-89cd070ac6.patch
apps/hash-ai-worker-ts/: package.json
apps/hash-ai-worker-ts/docker/: Dockerfile
apps/hash-api/: README.md  package.json  turbo.json
apps/hash-frontend/: next.config.js  package.json  panda.config.ts  vercel-install.sh
apps/hash-graph/: Cargo.toml  README.md
apps/hash-integration-worker/: package.json
apps/petrinaut-opt/: README.md  package.json  pyproject.toml  turbo.json
apps/petrinaut-opt/docker/: Dockerfile
apps/petrinaut-opt/openapi/: openapi.json
apps/petrinaut-opt/scripts/: __init__.py  generate_openapi.py
apps/petrinaut-opt/src/: optimization_api.py  petrinaut_client.py  petrinaut_optimizer.py  telemetry.py  utils.py
apps/petrinaut-opt/tests/: conftest.py  test_optimization_api.py  test_petrinaut_client.py  test_petrinaut_optimizer.py  test_status.py  test_telemetry.py
apps/petrinaut-website/: README.md  package.json  vercel-install.sh  vercel.json  vite.config.ts
apps/plugin-browser/: package.json
infra/compose/: compose.yml
libs/@local/graph/embeddings/: Cargo.toml  package.json
libs/@local/graph/embeddings/benches/: clustering.rs
libs/@local/graph/embeddings/docs/: dependency-diagram.mmd
libs/@local/graph/embeddings/src/: clustering.rs  dimension.rs  kernel.rs  lib.rs
libs/@local/graph/postgres-store/: Cargo.toml  package.json
libs/@local/graph/postgres-store/docs/: dependency-diagram.mmd
libs/@local/graph/postgres-store/postgres_migrations/: V54__entity_denormalized_provenance.sql  V55__entity_provenance_columns_authoritative.sql  V56__strip_denormalized_provenance_keys.sql
libs/@local/graph/postgres-store/src/: lib.rs
libs/@local/graph/postgres-store/src/permissions/: mod.rs
libs/@local/graph/postgres-store/src/snapshot/: mod.rs
libs/@local/graph/postgres-store/src/snapshot/action/: batch.rs  table.rs
libs/@local/graph/postgres-store/src/snapshot/entity/: batch.rs  channel.rs
libs/@local/graph/postgres-store/src/snapshot/ontology/data_type/: batch.rs
libs/@local/graph/postgres-store/src/snapshot/ontology/entity_type/: batch.rs
libs/@local/graph/postgres-store/src/snapshot/ontology/metadata/: batch.rs
libs/@local/graph/postgres-store/src/snapshot/ontology/property_type/: batch.rs
libs/@local/graph/postgres-store/src/snapshot/policy/: batch.rs  table.rs
libs/@local/graph/postgres-store/src/snapshot/principal/: batch.rs  channel.rs  table.rs
libs/@local/graph/postgres-store/src/snapshot/restore/: batch.rs
libs/@local/graph/postgres-store/src/store/: mod.rs  validation.rs
libs/@local/graph/postgres-store/src/store/postgres/: crud.rs  migration.rs  mod.rs  pool.rs  seed_policies.rs  traversal_context.rs
libs/@local/graph/postgres-store/src/store/postgres/knowledge/entity/: delete.rs  mod.rs  provenance.rs  query.rs  read.rs  summary.rs
libs/@local/graph/postgres-store/src/store/postgres/ontology/: data_type.rs  entity_type.rs  mod.rs  property_type.rs  read.rs
libs/@local/graph/postgres-store/src/store/postgres/query/: compile.rs  entity.rs  mod.rs  postgres_type.rs  rows.rs  table.rs
libs/@local/graph/postgres-store/src/store/postgres/query/ast/: column_reference.rs  identifier.rs  mod.rs  non_empty.rs  set_quantifier.rs  table_reference.rs
libs/@local/graph/postgres-store/src/store/postgres/query/ast/clause/: from_item.rs  group_by.rs  mod.rs  order_by.rs  select_list.rs  table_sample.rs  where_clause.rs  with.rs
libs/@local/graph/postgres-store/src/store/postgres/query/ast/expression/: constant.rs  function.rs  mod.rs  window.rs
libs/@local/graph/postgres-store/src/store/postgres/query/ast/statement/: insert.rs  mod.rs  select.rs
libs/@local/graph/postgres-store/src/store/postgres/query/ast/statement/select/: clause.rs  mod.rs  quantifier.rs  simple.rs
libs/@local/graph/postgres-store/src/store/postgres/query/compile/: mod.rs  tests.rs
libs/@local/graph/postgres-store/src/store/postgres/query/expression/: column_reference.rs  conditional.rs  mod.rs  with_clause.rs
libs/@local/graph/postgres-store/src/store/postgres/query/statement/: insert.rs  mod.rs  select.rs
libs/@local/graph/postgres-store/tests/: schema.rs
libs/@local/graph/postgres-store/tests/deletion/: created_by_columns.rs  created_by_fallback.rs  main.rs  purge.rs
libs/@local/graph/postgres-store/tests/principals/: actions.rs  main.rs  policies.rs
libs/@local/graph/type-fetcher/: Cargo.toml  package.json
libs/@local/graph/type-fetcher/src/: fetcher.rs  fetcher_server.rs  lib.rs  store.rs
libs/@local/temporal-client/: Cargo.toml  package.json
libs/@local/temporal-client/docs/: dependency-diagram.mmd
libs/@local/temporal-client/src/: ai.rs  error.rs  lib.rs  workflow.rs
libs/@local/temporal-client/tests/: echo.rs
libs/error-stack/: CHANGELOG.md  Cargo.toml  README.md  package.json
tests/hash-backend-integration/: package.json  tsconfig.json  vitest.config.ts  vitest.snapshot.config.ts
tests/hash-backend-load/: package.json
(+830 files in other folders)
