[project]
name = "petrinaut-optimization"
version = "0.1.0"
description = "Petrinaut parameter and initial state optimisation using optuna"
readme = "README.md"
requires-python = ">=3.10.20"
dependencies = [
    "fastapi>=0.128.8",
    "optuna>=3.6",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.39.0",
]
