[package]
name              = "hash-graph-postgres-store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
description       = "HASH Graph API"

[dependencies]
# Public workspace dependencies
hash-graph-authorization = { workspace = true, public = true, features = ["postgres"] }
hash-graph-migrations    = { workspace = true, public = true }
hash-graph-store         = { workspace = true, public = true, features = ["postgres"] }
hash-graph-validation    = { workspace = true, public = true }
hash-temporal-client     = { workspace = true, public = true }

# Public third-party dependencies
bon               = { workspace = true, public = true }
deadpool          = { workspace = true, public = true }
deadpool-postgres = { workspace = true, public = true }
futures-sink      = { workspace = true, public = true }
tokio             = { workspace = true, public = true, features = ["macros"] }
tokio-postgres    = { workspace = true, public = true }

# Private workspace dependencies
error-stack                    = { workspace = true, features = ["std", "serde", "unstable"] }
hash-codec                     = { workspace = true, features = ["numeric", "postgres"] }
hash-graph-embeddings          = { workspace = true }
hash-graph-temporal-versioning = { workspace = true, features = ["postgres"] }
hash-graph-types               = { workspace = true, features = ["postgres"] }
hash-status                    = { workspace = true }
type-system                    = { workspace = true, features = ["postgres"] }

# Private third-party dependencies
async-scoped   = { workspace = true, features = ["use-tokio"] }
bytes          = { workspace = true }
clap           = { workspace = true, optional = true, features = ["derive", "env"] }
derive-where   = { workspace = true }
derive_more    = { workspace = true }
dotenv-flow    = { workspace = true }
futures        = { workspace = true }
postgres-types = { workspace = true, features = ["derive", "with-serde_json-1"] }
rayon          = { workspace = true }
refinery       = { workspace = true, features = ["tokio-postgres"] }
regex          = { workspace = true }
semver         = { workspace = true, features = ["serde"] }
serde          = { workspace = true, features = ["derive"] }
serde_json     = { workspace = true }
simple-mermaid = { workspace = true }
time           = { workspace = true }
tracing        = { workspace = true }
utoipa         = { workspace = true, optional = true, features = ["uuid"] }
uuid           = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
# The crate's own test suites wrap each test in a rollback transaction, so they need the
# `test-utils`-gated `BeginReadOnlyTransaction` impl for `InTransaction` stores. The
# self-dependency enables the feature for test builds only via feature unification.
hash-graph-postgres-store = { workspace = true, features = ["test-utils"] }
hash-graph-test-data      = { workspace = true }
hash-telemetry            = { workspace = true }
indoc                     = { workspace = true }
pretty_assertions         = { workspace = true }
tokio                     = { workspace = true, features = ["macros"] }
tracing-subscriber        = { workspace = true, features = ["env-filter"] }

[features]
clap = ["dep:clap"]
# Exposes test-only impls, in particular `BeginReadOnlyTransaction` for stores already inside a
# transaction. See the `TODO(BE-688)` on the trait definition.
test-utils = []
utoipa = [
    "dep:utoipa",
    "hash-graph-store/utoipa",
    "hash-graph-types/utoipa",
    "hash-graph-temporal-versioning/utoipa",
    "hash-graph-authorization/utoipa",
]

[lints]
workspace = true


[package.metadata.sync.turborepo]
# The self-dependency above only exists to enable the `test-utils` feature for test builds; a
# literal self-reference in `package.json` would make Turborepo reject the package graph.
ignore-dev-dependencies = [
    "hash-graph-postgres-store",
]
