[package]
name              = "hash-graph-type-fetcher"
description       = "HTTP service to fetch external BP types"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
# Public workspace dependencies
hash-graph-store = { workspace = true, public = true }
type-system      = { workspace = true, public = true }

# Public third-party dependencies
axum       = { workspace = true, public = true }
serde_json = { workspace = true, public = true }
time       = { workspace = true, public = true, features = ["serde", "std"] }

# Private workspace dependencies
error-stack                    = { workspace = true }
hash-graph-authorization       = { workspace = true }
hash-graph-temporal-versioning = { workspace = true }
hash-graph-types               = { workspace = true }
hash-temporal-client           = { workspace = true }

# Private third-party dependencies
derive_more           = { workspace = true, features = ["display", "error"] }
futures               = { workspace = true }
include_dir           = { workspace = true, features = ["glob"] }
opentelemetry         = { workspace = true }
reqwest               = { workspace = true, features = ["json", "stream"] }
reqwest-middleware    = { workspace = true, features = ["json"] }
reqwest-tracing       = { workspace = true }
serde                 = { workspace = true, features = ["derive"] }
simple-mermaid        = { workspace = true }
tokio                 = { workspace = true, features = ["net"] }
tracing               = { workspace = true }
tracing-opentelemetry = { workspace = true }
url                   = { workspace = true }

[lints]
workspace = true
